# smart-scrapper

./: Dockerfile  README.md  app.py  pyproject.toml  render.yaml  requirements.txt  test.py  tools.py
