[project]
name = "data-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chainlit>=2.8.3",
    "openai>=2.6.1",
    "openai-agents>=0.4.2",
    "pandas>=2.3.3",
    "playwright>=1.55.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]
